--- a/app/src/main/res/layout/activity_password_resend.xml
+++ b/app/src/main/res/layout/activity_password_resend.xml
@@ -64,7 +64,7 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:hint="Password"
                         android:textSize="14sp"
                         android:padding="2dp"
@@ -85,7 +85,7 @@
                         android:id="@+id/confirmpassword"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:hint="Confirm Password"
                         android:padding="2dp"
                         android:textColor="@color/black"
@@ -98,14 +98,15 @@
                    android:layout_height="match_parent">
 
                    <com.google.android.material.button.MaterialButton
-                       android:id="@+id/sendSMS"
+                       android:id="@+id/LoginBack"
                        android:layout_width="114dp"
                        android:layout_height="43dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="32dp"
                        android:backgroundTint="#007aff"
                        android:gravity="center"
-                       android:text="Send SMS"
+                       android:text="@string/login"
+                       android:textColor="#383838"
                        android:textSize="13sp"
                        app:cornerRadius="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
