--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#d9d9d9"
     tools:context=".loginpage.LoginActivity">
-    
+
     <LinearLayout
         android:layout_width="310dp"
         android:layout_height="500dp"
@@ -20,117 +20,117 @@
             android:layout_height="match_parent"
             app:cardCornerRadius="10dp">
 
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center_horizontal"
-                  android:text="Login"
-                  android:textStyle="bold"
-                  android:textColor="@color/black"
-                  android:textSize="40sp"
-                  android:layout_marginTop="160px"
-                  />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="160px"
+                    android:text="Login"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
 
-              <com.google.android.material.textfield.TextInputLayout
-                  android:id="@+id/email_layout"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="30dp"
-                  app:boxCornerRadiusBottomEnd="20dp"
-                  app:boxCornerRadiusTopEnd="20dp"
-                  app:boxCornerRadiusBottomStart="20dp"
-                  app:boxCornerRadiusTopStart="20dp"
-                  android:layout_marginHorizontal="20dp">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/email_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="30dp"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp">
 
-                  <com.google.android.material.textfield.TextInputEditText
-                      android:id="@+id/email"
-                      android:layout_width="match_parent"
-                      android:layout_height="40dp"
-                      android:inputType="textEmailAddress"
-                      android:hint="Email"
-                      android:textSize="14sp"
-                      android:padding="2dp"
-                      android:textColor="@color/black"/>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:hint="Email"
+                        android:inputType="textEmailAddress"
+                        android:padding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
-              </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-              <com.google.android.material.textfield.TextInputLayout
-                  android:id="@+id/password_layout"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginHorizontal="20dp"
-                  android:layout_marginTop="6dp"
-                  app:boxCornerRadiusBottomEnd="20dp"
-                  app:boxCornerRadiusTopEnd="20dp"
-                  app:boxCornerRadiusBottomStart="20dp"
-                  app:boxCornerRadiusTopStart="20dp"
-                  app:passwordToggleEnabled="true">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="6dp"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp"
+                    app:passwordToggleEnabled="true">
 
-                  <com.google.android.material.textfield.TextInputEditText
-                      android:id="@+id/password"
-                      android:layout_width="match_parent"
-                      android:layout_height="40dp"
-                      android:hint="Password"
-                      android:textSize="14sp"
-                      android:padding="2dp"
-                      android:textColor="@color/black"/>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:hint="Password"
+                        android:padding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
-              </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Parolni unutdingizmi?"
-                  android:textSize="16sp"
-                  android:textColor="#797979"
-                  android:textStyle="normal"
-                  android:layout_gravity="center"
-                  android:layout_marginTop="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Parolni unutdingizmi?"
+                    android:textColor="#797979"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
-              <TextView
-                  android:id="@+id/resent_password"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Parolni Tiklash"
-                  android:textSize="16sp"
-                  android:textColor="@color/black"
-                  android:textStyle="normal"
-                  android:layout_gravity="center"
-                  android:layout_marginTop="2dp"/>
+                <TextView
+                    android:id="@+id/resent_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="2dp"
+                    android:text="Parolni Tiklash"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
-              <com.google.android.material.button.MaterialButton
-                  android:id="@+id/login"
-                  android:layout_width="110dp"
-                  android:layout_height="40dp"
-                  app:cornerRadius="30dp"
-                  android:textSize="16sp"
-                  android:layout_marginTop="14dp"
-                  android:layout_gravity="center"
-                  android:backgroundTint="#007aff"
-                  android:text="Login"
-                  android:textColor="#FFFFFF"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/login"
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="14dp"
+                    android:backgroundTint="#007aff"
+                    android:gravity="center"
+                    android:padding="1dp"
+                    android:text="Login"
+                    android:textColor="#424242"
+                    android:textSize="16sp"
+                    app:cornerRadius="30dp" />
 
-              <com.google.android.material.button.MaterialButton
-                  android:id="@+id/register"
-                  android:layout_width="110dp"
-                  android:layout_height="40dp"
-                  app:cornerRadius="30dp"
-                  android:textSize="16sp"
-                  android:layout_gravity="center"
-                  android:backgroundTint="#007aff"
-                  android:text="Register"
-                  android:textColor="#FFFFFF"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/register"
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:backgroundTint="#007aff"
+                    android:gravity="center"
+                    android:padding="1dp"
+                    android:text="Register"
+                    android:textColor="#373737"
+                    android:textSize="16sp"
+                    app:cornerRadius="30dp" />
 
 
-          </LinearLayout>
-
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
 </RelativeLayout>
