--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -62,7 +62,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="37dp"
                     android:layout_marginEnd="24dp"
-                    android:background="@drawable/text_bg"
+                    android:background="@drawable/search_background"
                     android:hint="Enter SMS Code"
                     android:inputType="textEmailAddress"
                     android:paddingStart="10dp"
@@ -82,7 +82,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="24dp"
                     android:text="+998"
-                    android:background="@drawable/text_bg"
+                    android:background="@drawable/search_background"
                     android:hint="Enter SMS Code"
                     android:inputType="number"
                     android:paddingStart="10dp"
@@ -105,6 +105,7 @@
                     android:gravity="center"
                     android:text="Send SMS"
                     android:textSize="13sp"
+                    android:textColor="#373737"
                     app:cornerRadius="30dp" />
 
             </RelativeLayout>
