--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,7 +58,7 @@
                         android:id="@+id/fullname"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:inputType="textEmailAddress"
                         android:hint="Full name"
                         android:textSize="14sp"
@@ -79,7 +79,7 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:inputType="textEmailAddress"
                         android:hint="Email"
                         android:textSize="14sp"
@@ -100,7 +100,7 @@
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:hint="Password"
                         android:textSize="14sp"
                         android:padding="2dp"
@@ -120,7 +120,7 @@
                         android:id="@+id/confirmpassword"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/text_bg"
+                        android:background="@drawable/search_background"
                         android:hint="Confirm Password"
                         android:textSize="14sp"
                         android:padding="2dp"
@@ -133,7 +133,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginHorizontal="46dp"
-                    android:background="@drawable/text_bg"
+                    android:background="@drawable/search_background"
                     android:layout_marginTop="8dp"
                     android:text="+998"
                     android:textSize="14sp"
@@ -150,6 +150,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="40dp"
                     android:text="Send SMS"
+                    android:textColor="#383838"
                     android:textSize="13sp"/>
 
             </LinearLayout>
