--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="136dp"
-        android:src="@drawable/book_img"
+        android:src="@drawable/book_img2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +35,14 @@
 
     <TextView
         android:id="@+id/nextTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         android:text="Keyingisi"
         android:textColor="@color/black"
-        android:textSize="17sp"
+        android:gravity="center"
+        android:textSize="20sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
