--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,16 +15,69 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sevimlilar"
+            android:layout_marginTop="24dp"
             android:gravity="center"
-            android:textSize="24sp"
+            android:text="Sevimlilar"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"/>
+            android:textSize="30sp" />
+
+        <LinearLayout
+            android:id="@+id/stop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="140dp"
+                android:src="@drawable/sad_emoji" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Sizda hozircha tanlangan\nkitoblar yo’q"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:text="Bosh sahifadagi to’plamlardan boshlang\nyoki kerakli kitobni qidiruv orqali toping"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="normal" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/back_home"
+                android:layout_width="145dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:backgroundTint="#007aff"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="Bosh sahifaga"
+                android:textAlignment="center"
+                android:padding="1dp"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                app:cornerRadius="30dp"
+                app:strokeColor="@color/black"
+                app:strokeWidth="1dp" />
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/book_list_favorite"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="gone" />
 
     </LinearLayout>
 
